  . magic method invocations. (Marcus)
- Improved extension SPL (Marcus).
  . added standard hierarchy of Exception classes
  . added interface Countable
  . added interfaces Subject and Observer
  . added spl_autoload*() functions
  . converted several 5.0 examples into c code
  . added class File
  . added possibility to use a string with class_parents() and
    class_implements(). (Andrey)
- Added the tidy_get_opt_doc() function to return documentation for
  configuration options in tidy. (Patch by: nlopess@php.net)
- Added support for .cc files in extensions. (Brian)
- Added imageconvolution() function which can be used to apply a custom 3x3
  matrix convolution to an image. (Pierre)
- Added optional first parameter to XsltProcessor::registerPHPFunctions to only  
  allow certain functions to be called from XSLT. (Christian)
- Added the ability to override the autotools executables used by the buildconf
  script via the PHP_AUTOCONF and PHP_AUTOHEADER environmental variables. (Jon)
- Added several new functions to support the PostgreSQL v3 protocol introduced 
  in PostgreSQL 7.4. (Christopher)
  . pg_transaction_status() - in-transaction status of a database connection.
  . pg_query_params() - execution of parameterized queries.
  . pg_prepare() - prepare named queries.
  . pg_execute() - execution of named prepared queries.
  . pg_send_query_params() - async equivalent of pg_query_params().
  . pg_send_prepare() - async equivalent of pg_prepare().
  . pg_send_execute() - async equivalent of pg_execute().
  . pg_result_error_field() - highly detailed error information, 
    most importantly the SQLSTATE error code.
  . pg_set_error_verbosity() - set verbosity of errors.
- Added optional fifth parameter "count" to preg_replace_callback() and
  preg_replace() to count the number of replacements made. FR #32275. (Andrey)
- Added optional third parameter "charlist" to str_word_count() which